# flexlate-dev

./: .buildinfo  .envrc  .flake8  .gitignore  .releaserc.yaml  CHANGELOG.md  Pipfile  README.md  conf.py  docs-requirements.in  flexlate.json  genindex.html  global-requirements.in  index.html  justfile  mvenv.yaml  mypy.ini  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  reqs_extension.py  search.html  searchindex.js  setup.cfg  sitemap.xml  temp-issue-template.md  tutorial.html
.husky/: pre-commit
.venvs/docs/: pyproject.toml
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js  schema.json
api/: flexlate_dev.html  flexlate_dev.server.html  modules.html
auto_examples/: index.html
binder/: requirements.txt
docsrc/: Makefile  autobuild.sh  generate-config-schema.sh
flexlate_dev/: __init__.py  cli.py  cli_validators.py  command_runner.py  command_type.py  config.py  config_schema.py  dict_merge.py  dirutils.py  exc.py  ext_flexlate.py  ext_subprocess.py  ext_threading.py  external_command_type.py  get_version.py  gituitls.py  gitutils.py  ignore.py  logger.py  project_ops.py  publish.py  render.py  server.py  user_command.py  user_runner.py
requirements/: dev-requirements-3.10-darwin-Darwin-x86_64.txt  dev-requirements-3.10-win32-Windows-AMD64.txt  dev-requirements-3.8-darwin-Darwin-x86_64.txt  dev-requirements-3.9-win32-Windows-AMD64.txt  docs-requirements-3.10-linux-Linux-x86_64.txt  docs-requirements-3.10-win32-Windows-AMD64.txt  docs-requirements-3.9-linux-Linux-x86_64.txt  docs-requirements-3.9-win32-Windows-AMD64.txt  global-requirements-3.10-darwin-Darwin-x86_64.txt  global-requirements-3.10-linux-Linux-x86_64.txt  global-requirements-3.10-win32-Windows-AMD64.txt  global-requirements-3.8-darwin-Darwin-x86_64.txt  global-requirements-3.8-linux-Linux-x86_64.txt  global-requirements-3.8-win32-Windows-AMD64.txt  global-requirements-3.9-darwin-Darwin-x86_64.txt  global-requirements-3.9-linux-Linux-x86_64.txt  global-requirements-3.9-win32-Windows-AMD64.txt  lint-requirements-3.8-win32-Windows-AMD64.txt  test-requirements-3.10-win32-Windows-AMD64.txt  (+1 more)
tests/: config.py  (+16 more)
(+67 files in other folders)
