[tool.poetry]
name = "flexlate-dev"
version = "0.22.0"
description = "Development tools for template authors using Flexlate"
authors = ["Nick DeRobertis <derobertis.nick@gmail.com>"]
readme = "README.md"
packages = [{include = "flexlate_dev"}]
license = "MIT"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # List supported python versions
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = ["conf.py", "version.py"]

[tool.poetry.urls]
repository = "https://github.com/nickderobertis/flexlate-dev"
documentation = "https://nickderobertis.github.io/flexlate-dev"

[tool.poetry.scripts]
dfxt = "flexlate_dev.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flexlate = ">=0.14.7"
py-app-conf = ">=1.1.0"
watchdog = "*"
typer = "*"
rich = "*"
patch = "*"
unidiff = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.black]
include = 'flexlate_dev.*\.pyi?$|tests.*\.pyi?$'

[tool.isort]
profile = "black"
skip = ['.bzr', '.direnv', '.eggs', '.git', '.hg', '.mypy_cache', '.pants.d', '.svn', '.tox', '.venv', '__pypackages__', '_build', 'buck-out', 'build', 'dist', 'node_modules', '.venvs']